Support for Columns
Support for column select

some refactoring
