# datastore-api-server/controllers/default_controller.py
@@ -10,6 +10,11 @@ _EXCLUDED_COLUMNS = ("create date",
                      "awards_data_id",
                      "financial_accounts_id")
 
+_SHORTCUT_COLUMNS = {
+    "complete": ["*"],
+    "basic": []
+}
+
 _OPERATORS = {
     "equals": "=",
     "greater than": ">",
@@ -34,6 +39,24 @@ class DatastoreDB:
                               '/' + config['data_store']['database'])
 
         self.engine = create_engine(datastore_string, echo=True)
+
+        print "Database connection established, acquiring available columns"
+        sql = text('SELECT column_name FROM information_schema.columns WHERE table_name=\'awards_data\'')
+        result = self.engine.execute(sql)
+        self.award_columns = []
+        for row in result:
+            if row[0] not in _EXCLUDED_COLUMNS:
+                self.award_columns.append(row[0])
+        self.award_columns_lower = [item.lower() for item in self.award_columns]
+
+        sql = text('SELECT column_name FROM information_schema.columns WHERE table_name=\'financial_accounts\'')
+        result = self.engine.execute(sql)
+        self.financial_columns = []
+        for row in result:
+            if row[0] not in _EXCLUDED_COLUMNS:
+                self.financial_columns.append(row[0])
+        self.financial_columns_lower = [item.lower() for item in self.financial_columns]
+
         print "Done"
 
     @staticmethod
@@ -42,30 +65,34 @@ class DatastoreDB:
             DatastoreDB._dbinstance = DatastoreDB()
         return DatastoreDB._dbinstance
 
-    # Parameters is an array of n [[FIELD, OPERATOR, VALUE]]
-    # Operators are guaranteed to go through the global array
     def query_awards(self, parameters):
-        query = parameters
-        sql = "SELECT * FROM awards_data"
-        sqlparams = []
-        if len(parameters["filters"]) == 0:
-            sql = sql + " LIMIT 1000" # Maybe change this later
-        else:
-            for parameter in parameters["filters"]:
-                # Construct an array of parameters for tuple construction later
-                operatorExpressions = []
-                sqlparams.append(parameter[2])
-                operatorExpressions.append("\"" + parameter[0] + "\" " + parameter[1] + " %s")
-            # Create a where clause that we can fill with a tuple
-            sql = sql + " WHERE " + " AND ".join(operatorExpressions)
-        result = self.engine.execute(sql, tuple(sqlparams))
-        return (query, [row2dict(row) for row in result])
+        return self.query(parameters,
+                         DatastoreDB.get_instance().award_columns,
+                         DatastoreDB.get_instance().award_columns_lower,
+                         "awards_data")
+
+    def query_financials(self, parameters):
+                return self.query(parameters,
+                                 DatastoreDB.get_instance().financial_columns,
+                                 DatastoreDB.get_instance().financial_columns_lower,
+                                 "financial_accounts")
 
     # Parameters is an array of n [[FIELD, OPERATOR, VALUE]]
     # Operators are guaranteed to go through the global array
-    def query_financials(self, parameters):
+    def query(self, parameters, column_array, column_array_lower, table_name):
         query = parameters
-        sql = "SELECT * FROM financial_accounts"
+        columns = []
+        for col in parameters["columns"]:
+            if col in _SHORTCUT_COLUMNS:
+                columns = columns + _SHORTCUT_COLUMNS[col]
+            else:
+                try:
+                    index = column_array_lower.index(col.lower())
+                    columns.append("\"" + column_array[index] + "\"")
+                except ValueError:
+                    raise Exception(col + " was not found in the list of available fields\n" +
+                                    "Current available fields are: " + "\n\t".join(column_array))
+        sql = "SELECT " + ",".join(columns) + " FROM " + table_name
         sqlparams = []
         if len(parameters["filters"]) == 0:
             sql = sql + " LIMIT 1000" # Maybe change this later
@@ -87,9 +114,25 @@ def row2dict(row):
         d[item[0]] = item[1]
     return d
 
+def construct_parameter_object(body):
+    filters = []
+    columns = ["*"]
+    if "columns" in body:
+        columns = body["columns"]
+    if "filters" in body:
+        for clause in body["filters"]:
+            if not clause['operation'] in _OPERATORS.keys():
+                raise Exception("Operation " + clause['operation'] + " not recognized")
+            filters.append([clause['fieldname'], _OPERATORS[clause['operation']], clause['value']])
+    parameters = {
+        "columns": columns,
+        "filters": filters
+    }
+    return parameters
+
 def award_fain_fain_get(FAIN):
     parameters = {
-        "columns": "*",
+        "columns": ["*"],
         "filters": [["FAIN", "=", str(FAIN)]]
     }
     results = DatastoreDB.get_instance().query_awards(parameters)
@@ -101,7 +144,7 @@ def award_fain_fain_get(FAIN):
 
 def award_piid_piid_get(PIID):
     parameters = {
-        "columns": "*",
+        "columns": ["*"],
         "filters": [["PIID", "=", str(PIID)]]
     }
     results = DatastoreDB.get_instance().query_awards(parameters)
@@ -113,7 +156,7 @@ def award_piid_piid_get(PIID):
 
 def award_uri_uri_get(URI):
     parameters = {
-        "columns": "*",
+        "columns": ["*"],
         "filters": [["URI", "=", str(URI)]]
     }
     results = DatastoreDB.get_instance().query_awards(parameters)
@@ -124,15 +167,7 @@ def award_uri_uri_get(URI):
                             "results": results})
 
 def awards_post(body):
-    filters = []
-    for clause in body:
-        if not clause['operation'] in _OPERATORS.keys():
-            raise Exception("Operation " + clause['operation'] + " not recognized")
-        filters.append([clause['fieldname'], _OPERATORS[clause['operation']], clause['value']])
-    parameters = {
-        "columns": "*",
-        "filters": filters
-    }
+    parameters = construct_parameter_object(body)
     results = DatastoreDB.get_instance().query_awards(parameters)
     query = results[0]
     results = results[1]
@@ -142,7 +177,7 @@ def awards_post(body):
 
 def financial_account_mac_get(MAC):
     parameters = {
-        "columns": "*",
+        "columns": ["*"],
         "filters": [["MainAccountCode", "=", str(MAC)]]
     }
     results = DatastoreDB.get_instance().query_financials(parameters)
@@ -153,15 +188,7 @@ def financial_account_mac_get(MAC):
                             "results": results})
 
 def financial_accounts_post(body):
-    filters = []
-    for clause in body:
-        if not clause['operation'] in _OPERATORS.keys():
-            raise Exception("Operation " + clause['operation'] + " not recognized")
-        filters.append([clause['fieldname'], _OPERATORS[clause['operation']], clause['value']])
-    parameters = {
-        "columns": "*",
-        "filters": filters
-    }
+    parameters = construct_parameter_object(body)
     results = DatastoreDB.get_instance().query_financials(parameters)
     query = results[0]
     results = results[1]
@@ -170,15 +197,7 @@ def financial_accounts_post(body):
                             "results": results})
 
 def financial_activities_post(body):
-    filters = []
-    for clause in body:
-        if not clause['operation'] in _OPERATORS.keys():
-            raise Exception("Operation " + clause['operation'] + " not recognized")
-        filters.append([clause['fieldname'], _OPERATORS[clause['operation']], clause['value']])
-    parameters = {
-        "columns": "*",
-        "filters": filters
-    }
+    parameters = construct_parameter_object(body)
     results = DatastoreDB.get_instance().query_financials(parameters)
     query = results[0]
     results = results[1]
